--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                                                 </a>
                                             </li>
                                             <li class="list-group-item calendar-icon">
-                                                <a target="_blank" href="https://calendar.google.com/calendar/event?action=TEMPLATE&amp;tmeid=MzVidmF2aWlxc2JnNW9hZ2VvZ3ExNmRwdG0gbW9oZGhhaXFhbGhhbGltQG0&amp;tmsrc=mohdhaiqalhalim%40gmail.com">
+                                                <a target="_blank" href="https://calendar.google.com/calendar/event?action=TEMPLATE&amp;tmeid=M2Y0MGFxOHMwcnVpa2c0aGE4NGFtdG9tdDIgN2ZkM2U2OTAyZDEzNjdlMTc0MTYxZWUzMTM0ZTRlM2ViODA1YmIwNzljNGJiMDYwOTA0YWNjNjk3YTVhYzQwMkBn&amp;tmsrc=7fd3e6902d1367e174161ee3134e4e3eb805bb079c4bb060904acc697a5ac402%40group.calendar.google.com">
                                                     <i class='bx bxl-google bx-sm' ></i>
                                                     <span>Add to Google Calendar</span>
                                                 </a>
