hide add to google  calendar

--- a/index.html
+++ b/index.html
@@ -347,12 +347,12 @@
                                                     <span>Add to Mobile Calendar</span>
                                                 </a>
                                             </li>
-                                            <li class="list-group-item calendar-icon">
+                                           <!--  <li class="list-group-item calendar-icon">
                                                 <a target="_blank" href="https://calendar.google.com/calendar/event?action=TEMPLATE&amp;tmeid=M2Y0MGFxOHMwcnVpa2c0aGE4NGFtdG9tdDIgN2ZkM2U2OTAyZDEzNjdlMTc0MTYxZWUzMTM0ZTRlM2ViODA1YmIwNzljNGJiMDYwOTA0YWNjNjk3YTVhYzQwMkBn&amp;tmsrc=7fd3e6902d1367e174161ee3134e4e3eb805bb079c4bb060904acc697a5ac402%40group.calendar.google.com">
                                                     <i class='bx bxl-google bx-sm' ></i>
                                                     <span>Add to Google Calendar</span>
                                                 </a>
-                                            </li>
+                                            </li> -->
                                         </ul>
                                     </div>
                                 </div>
