--- a/haiqal.html
+++ b/haiqal.html
@@ -3,8 +3,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
         <meta name="color-scheme" content="light only">
-        <meta property="og:site" content="https://eiqalhalim.github.io/haiqal-linda-solemnization/">
-        <meta property="og:title" content="Walimatulurus | Haiqal&#9829;Linda">
+        <meta property="og:site" content="https://eiqalhalim.github.io/Adib-Ezzati-solemnization/">
+        <meta property="og:title" content="Walimatulurus | Adib&#9829;Ezzati">
         <meta property="og:description" content="Tekan pautan untuk lihat jemputan"> 
         <meta property="og:image" content="img/marriednow-project/gambar-jemputan.jpg">
 
@@ -38,7 +38,7 @@
         <!-- AOS -->
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-        <title>Haiqal&#9829;Linda</title>
+        <title>Adib&#9829;Ezzati</title>
         <link rel="shortcut icon" href="img/icon-2.png">
         <link rel="icon" href="img/icon-2.png" sizes="192x192">
 
@@ -77,9 +77,9 @@
                             <p class="animated fadeInDown main_text drop-shadow-md">Walimatulurus</p>
                         </div>
                         <div class="card-couple">
-                            <p class="card-groom animated zoomIn main_text">Haiqal</p>
+                            <p class="card-groom animated zoomIn main_text">Adib</p>
                             <p class="card-with animated zoomIn main_text">&amp;</p>
-                            <p class="card-bride animated zoomIn main_text">Linda</p>
+                            <p class="card-bride animated zoomIn main_text">Ezzati</p>
                         </div>
                         <button class="text-white bg-gradient-to-r from-purple-500 via-purple-600 to-purple-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-purple-300 dark:focus:ring-purple-800 rounded-full text-sm px-3.5 py-2.5  mt-3 mb-3" id="start-btn">
                             <b> BUKA </b>
@@ -319,13 +319,13 @@
             <div id="color-calendar" class="pb-5"></div>
             <ul class="calendar">
                 <li class="calendar-icon">
-                    <a href="/storage/ical/haiqal_linda_wedding.ics">
+                    <a href="/storage/ical/Adib_Ezzati_wedding.ics">
                         <i class="fab fa-apple nav__icon"></i>
                         <span>Add to Apple Calendar</span>
                     </a> 
                 </li>
                 <li class="calendar-icon">
-                    <a target="_blank" href="https://calendar.google.com/calendar/event?action=TEMPLATE&amp;tmeid=MzVidmF2aWlxc2JnNW9hZ2VvZ3ExNmRwdG0gbW9oZGhhaXFhbGhhbGltQG0&amp;tmsrc=mohdhaiqalhalim%40gmail.com">
+                    <a target="_blank" href="https://calendar.google.com/calendar/event?action=TEMPLATE&amp;tmeid=MzVidmF2aWlxc2JnNW9hZ2VvZ3ExNmRwdG0gbW9oZGhhaXFhbGhhbGltQG0&amp;tmsrc=mohdAdibhalim%40gmail.com">
                         <i class="fab fa-google nav__icon"></i>
                         <span>Add to Google Calendar</span>
                     </a>
@@ -372,9 +372,9 @@
             <p class="animated fadeInDown main_text drop-shadow-md">Walimatulurus</p>
         </div>
         <div class="card-couple">
-            <p class="card-groom animated zoomIn main_text">Haiqal</p>
+            <p class="card-groom animated zoomIn main_text">Adib</p>
             <p class="card-with animated zoomIn main_text">&amp;</p>
-            <p class="card-bride animated zoomIn main_text">Linda</p>
+            <p class="card-bride animated zoomIn main_text">Ezzati</p>
         </div>
         <p class="card-date animated fadeIn main_text">
             <span style="font-size: 25px;">Ahad</span>
@@ -414,7 +414,7 @@
                 <p style="font-size: 16px">
                     <b>KELUARGA PENGANTIN LELAKI</b>
                 </p>
-                <p>Halim Bin Haron</p>
+                <p>Norhayani Binti Nong</p>
                 <hr class="h-px bg-gray-200 border-0 dark:bg-gray-800">  
                 <p>Ramlah Binti Mohammed</p>             
                 <p class="pt-3 pb-3">&amp;</p>                    
@@ -431,15 +431,15 @@
             Menjemput Dato'/Datin, Tuan/Puan, Encik/Cik ke walimatulurus
         </p>   
         <div class="info-invitor aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">
-            <p>Mohamad Haiqal bin Halim</p>
+            <p>Adib Muhaimin bin Abdullah</p>
             <p>&amp;</p>
-                <p>Mas Linda binti Mohmad</p>
+                <p>Nur Ezzati binti Ibrahim</p>
         </div>
         <div class="info-details aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">
             <p><b style="color: #be822b">Tarikh</b></p>
             <p>Ahad,
                 10
-                September
+                Disember
                 2023</p>
             <br>
             <p><b style="color: #be822b">Masa</b></p>
@@ -512,12 +512,12 @@
          <footer>
     <ul class="pb-20">
         <li class="pb-10">
-            <p class="hashtag text-center" style="font-size: 20px">#HaiqalfalLinlove</p>
+            <p class="hashtag text-center" style="font-size: 20px">#AdibfalLinlove</p>
         </li>
         <li class="flex justify-center text-center">
             <p>
                 Created with <span class="text-red-500"><i class="fa fa-heart"></i></span> by<br>
-                Haiqal Halim
+                Adib
             </p>
         </li>
     </ul>    
