--- a/haiqal2.html
+++ b/haiqal2.html
@@ -9,7 +9,7 @@
         <meta name="description" content="Tekan pautan untuk lihat jemputan">
         <meta name="author" content="Haiqal & Linda">
         <meta name="twitter:description" content="Invitation to our wedding Haiqal&Linda.">
-        <meta property="og:site" content="https://eiqalhalim.github.io/haiqal-linda-solemnization/">
+        <meta property="og:site" content="https://adibmuhaimin.github.io/adib-ezzati-wedding-reception/">
         <meta property="og:title" content="Walimatulurus | Haiqal&#9829;Linda">
         <meta property="og:description" content="Tekan pautan untuk lihat jemputan"> 
         <meta property="og:image" content="img/marriednow-project/Haiqal-Linda-square.png">
