--- a/haiqal.html
+++ b/haiqal.html
@@ -3,7 +3,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
         <meta name="color-scheme" content="light only">
-        <meta property="og:site" content="https://eiqalhalim.github.io/Adib-Ezzati-solemnization/">
+        <meta property="og:site" content="https://adibmuhaimin.github.io/adib-ezzati-wedding-reception/">
         <meta property="og:title" content="Walimatulurus | Adib&#9829;Ezzati">
         <meta property="og:description" content="Tekan pautan untuk lihat jemputan"> 
         <meta property="og:image" content="img/marriednow-project/gambar-jemputan.jpg">
