--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Haiqal&#9829;Linda</title>
+        <title>Adib&#9829;Ezzati</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noindex, nofollow">
         <meta name="description" content="Tekan pautan untuk lihat jemputan">
-        <meta name="author" content="Haiqal & Linda">
-        <meta name="twitter:description" content="Invitation to our wedding Haiqal&Linda.">
-        <meta property="og:site" content="https://eiqalhalim.github.io/haiqal-linda-solemnization/">
-        <meta property="og:title" content="Walimatulurus | Haiqal&#9829;Linda">
+        <meta name="author" content="Adib & Ezzati">
+        <meta name="twitter:description" content="Invitation to our wedding Adib&Ezzati.">
+        <meta property="og:site" content="https://github.com/adibmuhaimin/adib-ezzati-wedding-reception">
+        <meta property="og:title" content="Walimatulurus | Adib&#9829;Ezzati">
         <meta property="og:description" content="Tekan pautan untuk lihat jemputan"> 
-        <meta property="og:image" content="img/marriednow-project/Haiqal-Linda-square.png">
+        <meta property="og:image" content="img/marriednow-project/Adib-Ezzati-square.png">
         <script src="https://www.youtube.com/iframe_api"></script>
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -84,9 +84,9 @@
                                             </div>
                                             <div class="row"> 
                                                 <div class="alice-font main_text text-center">
-                                                <p class="animated zoomIn alice-font" style="color:#b69640; font-size:4em;">HAIQAL</p> 
+                                                <p class="animated zoomIn alice-font" style="color:#b69640; font-size:4em;">Adib</p> 
                                                 <p class="animated zoomIn alice-font" style="color:#8f712f; font-size:4em;">&amp;</p> 
-                                                <p class="animated zoomIn alice-font" style="color:#b69640; font-size:4em;">LINDA</p>
+                                                <p class="animated zoomIn alice-font" style="color:#b69640; font-size:4em;">Ezzati</p>
                                                 </div> 
                                             </div>
                                             <div class="row text-center pt-4"> 
@@ -153,9 +153,9 @@
                                         </div>
                                         <div class="row"> 
                                             <div class="alice-font main_text text-center">
-                                            <p class="animated zoomIn alice-font" style="color:#b69640; font-size:2.5em;">HAIQAL</p> 
+                                            <p class="animated zoomIn alice-font" style="color:#b69640; font-size:2.5em;">Adib</p> 
                                             <p class="animated zoomIn alice-font" style="color:#8f712f; font-size:2.5em;">&amp;</p> 
-                                            <p class="animated zoomIn alice-font" style="color:#b69640; font-size:2.5em;">LINDA</p>
+                                            <p class="animated zoomIn alice-font" style="color:#b69640; font-size:2.5em;">Ezzati</p>
                                             </div> 
                                         </div>
                                         <div class="row"> 
@@ -209,9 +209,9 @@
                                         Menjemput Dato'/Datin, Tuan/Puan, Encik/Cik ke walimatulurus
                                     </p>   
                                     <div class="info-invitor aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">
-                                        <p style="font-size:22px;">Mohamad Haiqal bin Halim</p>
+                                        <p style="font-size:22px;">Mohamad Adib bin Halim</p>
                                         <p>&amp;</p>
-                                            <p style="font-size:22px;">Mas Linda binti Mohmad</p>
+                                            <p style="font-size:22px;">Mas Ezzati binti Mohmad</p>
                                     </div>
                                     <div class="info-details aos-init aos-animate mt-3" data-aos="fade-up" data-aos-duration="1000">
                                         <p class="mt-3 mb-1" style="font-size:18px;"><b style="color: #b69640">Tarikh</b></p>
@@ -293,7 +293,7 @@
                                     <p class="mx-2">
                                         <span style="color: #b69640">
                                             <i class="fa-brands fa-codepen"></i></span> Developed by<br>
-                                        Haiqal Halim
+                                        Adib Halim
                                     </p> 
                                 </li>
                                 <li class="flex justify-center text-center mt-3">
@@ -307,7 +307,7 @@
                                     <p class="mx-2">
                                         <span style="color: #b69640">
                                             <i class="fa-solid fa-heart-circle-check"></i></span> Approved by<br>
-                                            Linda Mohmad
+                                            Ezzati Mohmad
                                     </p>
                                 </li>
                             </ul>    
@@ -595,7 +595,7 @@
                                 <div class="row">
                                     <div class="col">
                                         <input type="text" readonly class="form-control-plaintext" id="bankName" value="Bank Islam Malaysia Berhad">
-                                        <input type="text" readonly class="form-control-plaintext" value="Mohamad Haiqal bin Halim">
+                                        <input type="text" readonly class="form-control-plaintext" value="Mohamad Adib bin Halim">
                                     </div>
                                 </div>
                             </div>
